--- a/index.html
+++ b/index.html
@@ -173,5 +173,65 @@
                 </div>
             </div>
         </section>
+        <section class="blue_block">
+            <div class="container">
+                <div class="blue_title">
+                    <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
+                    <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+                </div>
+            </div>
+                <div class="container blue_container_colonne">
+                <div class="blue_col_1 blue_col">
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="loghetto">
+                        <p class="blue_number">150+</p>
+                        <p class="blue_box_descr">HubSpot user groups</p>
+                    </div>
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg" alt="loghetto">
+                        <p class="blue_number">400+</p>
+                        <p class="blue_box_descr">integrations</p>
+                    </div>
+                </div>
+                <div class="blue_col_2 blue_col">
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="loghetto">
+                        <p class="blue_number">7M+</p>
+                        <p class="blue_box_descr">monthly visits</p>
+                    </div>
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="loghetto">
+                        <p class="blue_number">6</p>
+                        <p class="blue_box_descr">languages</p>
+                    </div>
+                </div>
+                <div class="blue_col_3 blue_col">
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="loghetto">
+                        <p class="blue_number">218K+</p>
+                        <p class="blue_box_descr">certified professionals</p>
+                    </div>
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="loghetto">
+                        <p class="blue_number">2.6M+</p>
+                        <p class="blue_box_descr">social followers</p>
+                    </div>
+                </div>
+                <div class="blue_col_4 blue_col">
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="loghetto">
+                        <p class="blue_number">26K</p>
+                        <p class="blue_box_descr">registered attendees</p>
+                    </div>
+                    <div class="blue_box">
+                        <img src="https://www.hubspot.com/hubfs/growthhub-white-small-1.svg" alt="loghetto">
+                        <p class="blue_number">5K+</p>
+                        <p class="blue_box_descr">profiles and counting</p>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+        </section>
     </body>
 </html>
