--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HubSpot</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/d2d2dbcb83.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -181,56 +181,67 @@
                 </div>
             </div>
                 <div class="container blue_container_colonne">
-                <div class="blue_col_1 blue_col">
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="loghetto">
-                        <p class="blue_number">150+</p>
-                        <p class="blue_box_descr">HubSpot user groups</p>
+                    <div class="blue_col_1 blue_col">
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="loghetto">
+                            <p class="blue_number">150+</p>
+                            <p class="blue_box_descr">HubSpot user groups</p>
+                        </div>
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg" alt="loghetto">
+                            <p class="blue_number">400+</p>
+                            <p class="blue_box_descr">integrations</p>
+                        </div>
                     </div>
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg" alt="loghetto">
-                        <p class="blue_number">400+</p>
-                        <p class="blue_box_descr">integrations</p>
+                    <div class="blue_col_2 blue_col">
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="loghetto">
+                            <p class="blue_number">7M+</p>
+                            <p class="blue_box_descr">monthly visits</p>
+                        </div>
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="loghetto">
+                            <p class="blue_number">6</p>
+                            <p class="blue_box_descr">languages</p>
+                        </div>
+                    </div>
+                    <div class="blue_col_3 blue_col">
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="loghetto">
+                            <p class="blue_number">218K+</p>
+                            <p class="blue_box_descr">certified professionals</p>
+                        </div>
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="loghetto">
+                            <p class="blue_number">2.6M+</p>
+                            <p class="blue_box_descr">social followers</p>
+                        </div>
+                    </div>
+                    <div class="blue_col_4 blue_col">
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="loghetto">
+                            <p class="blue_number">26K</p>
+                            <p class="blue_box_descr">registered attendees</p>
+                        </div>
+                        <div class="blue_box">
+                            <img src="https://www.hubspot.com/hubfs/growthhub-white-small-1.svg" alt="loghetto">
+                            <p class="blue_number">5K+</p>
+                            <p class="blue_box_descr">profiles and counting</p>
+                        </div>
                     </div>
                 </div>
-                <div class="blue_col_2 blue_col">
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="loghetto">
-                        <p class="blue_number">7M+</p>
-                        <p class="blue_box_descr">monthly visits</p>
-                    </div>
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="loghetto">
-                        <p class="blue_number">6</p>
-                        <p class="blue_box_descr">languages</p>
-                    </div>
+            </div>
+        </section>
+        <section class="brands">
+            <div class="container brands_container">
+                <div class="brands_left">
+                    <h4>73,400</h4>
+                    <p>customers in over <b>120</b> countries growing their businesses with HubSpot</p>
                 </div>
-                <div class="blue_col_3 blue_col">
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="loghetto">
-                        <p class="blue_number">218K+</p>
-                        <p class="blue_box_descr">certified professionals</p>
-                    </div>
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="loghetto">
-                        <p class="blue_number">2.6M+</p>
-                        <p class="blue_box_descr">social followers</p>
-                    </div>
-                </div>
-                <div class="blue_col_4 blue_col">
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="loghetto">
-                        <p class="blue_number">26K</p>
-                        <p class="blue_box_descr">registered attendees</p>
-                    </div>
-                    <div class="blue_box">
-                        <img src="https://www.hubspot.com/hubfs/growthhub-white-small-1.svg" alt="loghetto">
-                        <p class="blue_number">5K+</p>
-                        <p class="blue_box_descr">profiles and counting</p>
-                    </div>
+                <div class="brands_right">
+                    <img src="img/brands.png" alt="Brands">
                 </div>
 
-                </div>
             </div>
         </section>
     </body>
