--- a/index.html
+++ b/index.html
@@ -241,7 +241,22 @@
                 <div class="brands_right">
                     <img src="img/brands.png" alt="Brands">
                 </div>
-
+            </div>
+        </section>
+        <section class="cta">
+            <div class="container cta_container">
+                <div class="cta_left">
+                    <h5>Start Growing With HubSpot Today</h5>
+                    <p id="cta_main_p">With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                    <span>
+                        <a href="#" class="main_btn">Get HubSpot Free</a>
+                    </span>
+                    <p>Get started with FREE tools, or get more with our premium software.</p>
+                </div>
+                <div class="cta_right">
+                    <img id="cta_img" src="img/cta_img.png" alt="Testimonial">
+                    <div class="boh"></div>
+                </div>
             </div>
         </section>
     </body>
