--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="header_bot">
                 <div class="container">
                     <div class="h_bot_l">
-                        <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="Logo">
+                        <a href="">
+                            <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="Logo">
+                        </a>
                     </div>
                     <div class="h_bot_r">
                         <ul>
@@ -70,7 +72,6 @@
                 </div>
             </div>
         </header>
-
         <section class="jumbo">
             <div class="container">
                 <div class="jumbo_wrap">
@@ -81,7 +82,6 @@
                 </div>
             </div>
         </section>
-
         <section class="main">
             <div class="container">
                 <div class="main_riga_1 clearfix">
@@ -259,5 +259,89 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="container footop_container">
+                <div class="footop">
+                    <div class="footop_col_1 footop_col">
+                        <h6>Increase Your Traffic</h6>
+                        <ul>
+                            <li><a class="footop_a" href="#">Ad Software</a></li>
+                            <li><a class="footop_a" href="#">Blog Software</a></li>
+                            <li><a class="footop_a" href="#">SEO Software</a></li>
+                            <li><a class="footop_a" href="#">Social Media Software</a></li>
+                            <li><a class="footop_a" href="#">Content Management System</a></li>
+                        </ul>
+                    </div>
+                    <div class="footop_col_2 footop_col">
+                        <h6>Connect With Leads</h6>
+                        <ul>
+                            <li><a class="footop_a" href="#">Find New Prospects</a></li>
+                            <li><a class="footop_a" href="#">Email Tracking</a></li>
+                            <li><a class="footop_a" href="#">Sales Email Templates</a></li>
+                            <li><a class="footop_a" href="#">Click to Call Your Leads</a></li>
+                            <li><a class="footop_a" href="#">Email Marketing</a></li>
+                        </ul>
+                    </div>
+                    <div class="footop_col_3 footop_col">
+                        <h6>Close and Manage Leads</h6>
+                        <ul>
+                            <li><a class="footop_a" href="#">Document Tracking Tool</a></li>
+                            <li><a class="footop_a" href="#">Meeting Schedule Tool</a></li>
+                            <li><a class="footop_a" href="#">Sales Automation Tool</a></li>
+                            <li><a class="footop_a" href="#">Lead Management Tool</a></li>
+                            <li><a class="footop_a" href="#">Pipeline Management Tool</a></li>
+                        </ul>
+                    </div>
+                    <div class="footop_col_4 footop_col">
+                        <h6>Support and Tools</h6>
+                        <ul>
+                            <li><a class="footop_a" href="#">HubSpot Partners</a></li>
+                            <li><a class="footop_a" href="#">Join a Local User Group</a></li>
+                            <li><a class="footop_a" href="#">PieSync Integrations</a></li>
+                            <li><a class="footop_a" href="#">HubSpot Templates</a></li>
+                            <li><a class="footop_a" href="#">Free Tools & Generators</a></li>
+                            <li>
+                                <a class="footer_btn" href="#">Contact HubSpot Support</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="container footmid_container">
+                <div class="footmid">
+                    <ul>
+                        <li><span><a href="">English</a></span></li>
+                        <li><span><a href="">Deutsch</a></span></li>
+                        <li><span><a href="">日本語</a></span></li>
+                        <li><span><a href="">Español</a></span></li>
+                        <li><span><a href="">Português</a></span></li>
+                        <li><span><a href="">Français</a></span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="container foobot_container">
+                <div class="foobot_left">
+                    <a href="">
+                        <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="Logo">
+                    </a>
+                    <p>Copyright © 2020 HubSpot, Inc.</p>
+                </div>
+                <div class="foobot_right">
+                    <span><a href="">Legal Stuff</a></span>
+                    <span><a href="">Privacy Policy</a></span>
+                </div>
+            </div>
+        </footer>
+        <div id="help">
+            <a href=""><i class="fas fa-comments"></i></a>
+        </div>
     </body>
 </html>
