--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
             <div class="header_top ">
                 <div class="container">
                     <div class="h_top_l">
-                        <span>
+
+                        <div class="dropdown">
+
                             <a href="#" id="lingua">
                                 <i class="fas fa-globe-americas"></i>
                                 English
                                 <i class="fas fa-caret-down"></i>
                             </a>
-                        </span>
+
+                            <div class="dd_options">
+                                <a href="#">Oleee</a>
+                                <a href="#">Oleee</a>
+                                <a href="#">Oleee</a>
+                                <a href="#">Oleee</a>
+                            </div>
+                        </div>
                         <span><a href="#">Contact Sales</a></span>
                     </div>
 
@@ -40,7 +49,7 @@
             <div class="header_bot">
                 <div class="container">
                     <div class="h_bot_l">
-                        <a href="">
+                        <a href="index.html">
                             <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="Logo">
                         </a>
                     </div>
@@ -230,7 +239,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
         <section class="brands">
             <div class="container brands_container">
@@ -329,13 +337,13 @@
             </div>
             <div class="container foobot_container">
                 <div class="foobot_left">
-                    <a href="">
+                    <a href="index.html">
                         <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="Logo">
                     </a>
                     <p>Copyright © 2020 HubSpot, Inc.</p>
                 </div>
                 <div class="foobot_right">
-                    <span><a href="">Legal Stuff</a></span>
+                    <span><a href="">ilLegal Stuff</a></span>
                     <span><a href="">Privacy Policy</a></span>
                 </div>
             </div>
