Lang dropdown menu

--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
             <div class="header_top ">
                 <div class="container">
                     <div class="h_top_l">
-
                         <div class="dropdown">
-
                             <a href="#" id="lingua">
                                 <i class="fas fa-globe-americas"></i>
                                 English
                                 <i class="fas fa-caret-down"></i>
                             </a>
-
                             <div class="dd_options">
-                                <a href="#">Oleee</a>
-                                <a href="#">Oleee</a>
-                                <a href="#">Oleee</a>
-                                <a href="#">Oleee</a>
+                                <a href="#">Deutsch</a>
+                                <a href="#">日本語</a>
+                                <a href="#">Français</a>
+                                <a href="#">Español</a>
+                                <a href="#">Português</a>
                             </div>
                         </div>
                         <span><a href="#">Contact Sales</a></span>
