--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                 English
                                 <i class="fas fa-caret-down"></i>
                             </a>
-                            <div class="dd_options">
+                            <div class="dd_options lang_dd_options">
                                 <a href="#">Deutsch</a>
                                 <a href="#">日本語</a>
                                 <a href="#">Français</a>
@@ -62,9 +62,60 @@
                             <li><a href="#">Pricing</a></li>
 
                             <li>
-                                <a href="#">
-                                    Resources <i class="fas fa-caret-down"></i>
-                                </a>
+                                <div class="dropdown">
+                                    <a href="#">
+                                        Resources <i class="fas fa-caret-down"></i>
+                                    </a>
+                                    <div class="dd_options dd_resources">
+                                        <div class="dd_resources_col1">
+                                            <div class="reso_opt">
+                                                <a href="#">
+                                                    <h3>Blog</h3>
+                                                    <p>Read marketing, sales, agency, and customer success blog content.</p>
+                                                </a>
+                                                <a href="#">
+                                                    <h3>Customer Stories</h3>
+                                                    <p>Hear from the businesses that use HubSpot to grow better every day.</p>
+                                                </a>
+                                                <a href="#">
+                                                    <h3>Developers</h3>
+                                                    <p>Create apps and custom integrations for businesses using HubSpot.</p>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="dd_resources_col2">
+                                            <div class="reso_opt">
+                                                <a href="#">
+                                                    <h3>Ebooks, Guides & More</h3>
+                                                    <p>Get access to HubSpot’s most popular marketing resources.</p>
+                                                </a>
+                                                <a href="#">
+                                                    <h3>Onboarding & Services</h3>
+                                                    <p>Find training and consulting services to help you thrive with HubSpot.</p>
+                                                </a>
+                                                <a href="#">
+                                                    <h3>Research & Reports</h3>
+                                                    <p>Get up-to-date research and data on hot business trends.</p>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="dd_resources_col3">
+                                            <div class="reso_opt">
+                                                <a href="#">
+                                                    <h3>Free Courses & Certifications</h3>
+                                                    <p>Take courses on the latest business trends, taught by industry experts.</p>
+                                                </a>
+                                                <a href="#">
+                                                    <h3>What Is Inbound?</h3>
+                                                    <p>Get a primer on how inbound helps your business grow better.</p>
+                                                </a>
+                                                <a href="#">
+                                                    <h3>Customer Support</h3>
+                                                    <p>Get help if you have questions about using HubSpot software.</p>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
                             </li>
 
                             <li>
